<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/layout">

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="160dp"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:layout_below="@id/num2"
        android:text="@string/add"
        android:layout_marginStart="160dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:hint="@string/result"
        android:layout_marginStart="100dp" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginLeft="100dp"
        android:hint="@string/enter_number_1"
        android:importantForAutofill="no"
        android:layout_marginStart="100dp" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/num1"
        android:layout_marginLeft="100dp"
        android:inputType="number"
        android:hint="@string/enter_number_2"
        android:importantForAutofill="no"
        android:layout_marginStart="100dp" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/num2"
        android:text="@string/sub"
        android:textAlignment="center" />

    <Button
        android:id="@+id/mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/add"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/add"
        android:text="@string/multiply"/>

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/sub"
        android:text="@string/divide"
        android:layout_marginStart="100dp" />

    <Button
        android:id="@+id/sqre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/mul"
        android:text="@string/square"
        android:layout_marginStart="220dp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="150dp"
        android:layout_below="@id/div"
        android:text="@string/clear"
        android:layout_marginStart="160dp" />
</RelativeLayout>